# module-easyexif

./: CMakeLists.txt
src/: easyexif.qpp
test/: exif.qtest
test/test-images/: short-ascii-MM.jpg.expected  test2.jpg.expected  test3.jpg.expected
